Moving right column down

--- a/less/ku-cms-components.less
+++ b/less/ku-cms-components.less
@@ -192,17 +192,15 @@ nav {
         margin-top: @ku-rightcolumn-top;
       }
     }
-
-    // .flexiblebox,
-    // .flexiblebox-as-rightbox,
-    // .gcitem,
-    // .panel {
-    //   &:first-child {
-    //     margin-top: @ku-rightcolumn-top;
-    //   }
-    // }
-
-}
+    .flexiblebox,
+    .flexiblebox-as-rightbox,
+    .gcitem,
+    .panel {
+      &:first-child {
+        margin-top: @ku-rightcolumn-top;
+      }
+    }
+  }
 }
 
 .rightbox {
