Moving right column down

--- a/less/ku-cms-components.less
+++ b/less/ku-cms-components.less
@@ -192,10 +192,10 @@ nav {
         margin-top: @ku-rightcolumn-top;
       }
     }
-    .flexiblebox,
-    .flexiblebox-as-rightbox,
-    .gcitem,
-    .panel {
+    &>.flexiblebox,
+    &>.flexiblebox-as-rightbox,
+    &>.gcitem,
+    &>.panel {
       &:first-child {
         margin-top: @ku-rightcolumn-top;
       }
