--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -498,6 +498,9 @@
       .header {
         padding-top: 6px;
         padding-bottom: 4px;
+        @media all and (max-width: @screen-xs) {
+          padding: 8px 18px 8px 10px;
+        }
       }
 
       .text {
