--- a/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
+++ b/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
@@ -60,58 +60,38 @@ html:lang(en) .ku-branding-text {
   display: none;
 }
 
-.jumpboard {
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  position: relative;
-  margin-left: 0;
-  margin-right: 0;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  background: #fff;
-}
-@media all and (min-width: 768px) {
-  .jumpboard {
-    height: 289px;
-  }
-}
-
 .jumpboard .jumpcolumn {
-  margin-bottom: 0 !important;
-  margin-top: 0 !important;
-  padding-left: 23px;
-  padding-right: 23px;
-  position: relative;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
-.jumpboard .jumpcolumn:last-child {
-  border-right: 0
-}
-
-.jumpboard .jumpcolumn .jumpheading {
+.jumpboard .jumpcolumn li {
   position: relative;
-  margin: 0 0 11px;
   font-size: 22px;
-  color: #901a1e;
-  border-bottom: 1px solid #777;
-    padding-bottom: 10px;
+  font-weight: 400;
+  padding: 10px 0;
 }
 
-.jumpboard .jumpcolumn .jumpheading a {
-  color: inherit !important;
+.jumpboard .jumpcolumn li+li {
+  border-top: 1px solid #777;
 }
 
-.jumpboard .jumpcolumn .jumpheading:after {
+.jumpboard .jumpcolumn li a {
+  display: block;
+  position: relative;
+  color: #901a1e !important;
+}
+
+.jumpboard .jumpcolumn li a:after {
   z-index: 2;
   position: absolute;
-  top: 10px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
   right: 10px;
   font-family: 'ku-symbols';
-  font-size: .6em;
+  font-size: 16px;
   font-style: normal;
   font-weight: normal;
   line-height: 1;
@@ -121,75 +101,17 @@ html:lang(en) .ku-branding-text {
   -webkit-font-smoothing: antialiased;
 }
 
-.jumpboard .jumpcolumn .jumplinks {
-  padding-left: 0;
-  margin: 0;
-  list-style: none;
-}
-
-.jumpboard .jumpcolumn .jumplinks li {
-  margin: 5px 0;
-}
-
-.jumpboard .jumpcolumn .jumplinks li a {
-  padding: 0;
-  line-height: 20px;
-  font-size: 14px;
-  font-weight: 700;
-  color: #606060;
-  display: block;
-}
-
-
-
-@media screen and (max-width: 767px) {
-
-  /*Target first row - make it full width for sliders*/
-  /* .FullWidthFrontpage .main-content .row:first-child .gccolumn.column1 {
-    padding-right: 0;
-    padding-left: 0;
-    width: 100vw;
-    max-width: 100%;
-  } */
+@media all and (min-width: 768px) {
   .jumpboard {
-    padding: 0;
-    -ms-flex-direction: column;
-    -webkit-flex-direction: column;
-    flex-direction: column;
+    height: 289px;
   }
 
-  .jumpboard .jumpcolumn:first-child .jumpheading {
-    border-top: 0 !important;
+  .jumpboard .jumpcolumn {
+    padding-right: 32px;
+    padding-left: 32px;
   }
 
-  .jumpboard .jumpcolumn .jumpheading {
-    border-bottom: 1px solid #777;
-    background: #fff;
-    font-size: 1.5em !important;
-    font-weight: 600;
-    margin: 0;
-    padding: 7px 35px 10px 20px;
-  }
-
-  .jumpboard .jumpcolumn .jumpheading:after {
-    font-size: 16px;
-    position: absolute;
-    right: 20px;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
-  }
-
-  .jumpboard .jumpcolumn .jumplinks li {
-    border-bottom: 1px solid #ccc;
-    margin: 0;
-  }
-
-  .jumpboard .jumpcolumn .jumplinks li a {
-    padding: 10px 20px 12px 20px;
-  }
-
-  .jumpboard .jumpcolumn .jumplinks li a:active, .jumpboard .jumpcolumn .jumplinks li a:hover, .jumpboard .jumpcolumn .jumplinks li a:focus {
-    background-color: #f1f1f1;
+  .jumpboard .jumpcolumn li a:after {
+    right: 10px;
   }
 }
