--- a/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
+++ b/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
@@ -106,7 +106,7 @@ html:lang(en) .ku-branding-text {
   }
 
   .jumpboard .jumpcolumn {
-    padding: 23px 32px 23px 32px;
+    padding: 0 30px 13px 30px;
   }
 
   .jumpboard .jumpcolumn li a:after {
