--- a/docs/_includes/css/responsive-utilities.html
+++ b/docs/_includes/css/responsive-utilities.html
@@ -115,10 +115,15 @@
           <th scope="row"><code>.visible-*-inline-block</code></th>
           <td><code>display: inline-block;</code></td>
         </tr>
+        <!-- KU specific: -->
+        <tr>
+          <th scope="row"><code>.visible-*-flex</code></th>
+          <td><code>display: flex;</code></td>
+        </tr>
       </tbody>
     </table>
   </div>
-  <p>So, for extra small (<code>xs</code>) screens for example, the available <code>.visible-*-*</code> classes are: <code>.visible-xs-block</code>, <code>.visible-xs-inline</code>, and <code>.visible-xs-inline-block</code>.</p>
+  <p>So, for extra small (<code>xs</code>) screens for example, the available <code>.visible-*-*</code> classes are: <code>.visible-xs-block</code>, <code>.visible-xs-inline</code>, <code>.visible-xs-inline-block</code>, and <code>.visible-xs-flex</code>.</p>
   <p>The classes <code>.visible-xs</code>, <code>.visible-sm</code>, <code>.visible-md</code>, and <code>.visible-lg</code> also exist, but are <strong>deprecated as of v3.2.0</strong>. They are approximately equivalent to <code>.visible-*-block</code>, except with additional special cases for toggling <code>&lt;table&gt;</code>-related elements.</p>
 
   <h2 id="responsive-utilities-print">Print classes</h2>
