--- a/docs/assets/css/doctypes/pureintegration.css
+++ b/docs/assets/css/doctypes/pureintegration.css
@@ -64,12 +64,12 @@ div.tabbed-search-box ul.box-tabs {
 table.properties {
   width: 100%;
   max-width: 100%;
-  margin-bottom: 15px;
+  margin-bottom: 15px!important;
+  border: 1px solid #ddd;
 }
 
 table.properties th, table.properties td {
-  padding: 8px;
+  padding: 8px!important;
   line-height: 1.5;
-  vertical-align: top;
   border-top: 1px solid #ddd;
 }
