--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -171,9 +171,9 @@
       .image-fadeOut();
     }
 
-    .caption {
-      color: @text-color;
-    }
+    // .caption {
+    //   color: @text-color;
+    // }
   }
 }
 
