Move right content down

--- a/docs/_includes/ku-leftmenu.html
+++ b/docs/_includes/ku-leftmenu.html
@@ -10,7 +10,7 @@
         <ul>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="../ku-default/">Template with left menu</a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="../ku-right-sidebar/">Template with left menu and right sidebar</a></li>
-          <li role="presentation"><a role="menuitem" tabindex="-1" href="../ku-searchpage/">Template with seaarch content</a></li>
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="../ku-searchpage/">Template with search content</a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="../ku-non-responsive/">Non responsive page</a></li>
         </ul>
       </li>
