--- a/less/ku-cms-components.less
+++ b/less/ku-cms-components.less
@@ -186,7 +186,7 @@ nav {
   // @media (max-width: @screen-xs-max) {
   //   margin-top: @ku-rightcolumn-top;
   // }
-  @media (min-width: @screen-sm) {
+  @media (min-width: @screen-md) {
     .rightbox {
       &:first-child {
         margin-top: @ku-rightcolumn-top;
