--- a/less/ku-cms-components.less
+++ b/less/ku-cms-components.less
@@ -52,7 +52,7 @@ nav {
     }
   }
 }
-@media (min-width: @screen-sm) {
+@media (min-width: @screen-md) {
   //Gridforside - rightbox i grid højre side:
   .GridForside {
     .gridcontent {
@@ -122,6 +122,10 @@ nav {
 
 #gridsidebar {
   .row {
+    @media (max-width: @screen-sm-max) {
+      margin-top: @grid-gutter-height;
+    }
+
     [class*="col-"] {
       margin-bottom: @grid-gutter-height;
 
@@ -136,7 +140,7 @@ nav {
         margin-top: 0;
       }
     }
-    @media (min-width: @screen-sm) {
+    @media (min-width: @screen-md) {
       &:first-child {
         margin-top: @ku-rightcolumn-top;
       }
@@ -192,10 +196,11 @@ nav {
         margin-top: @ku-rightcolumn-top;
       }
     }
-    &>.flexiblebox,
-    &>.flexiblebox-as-rightbox,
-    &>.gcitem,
-    &>.panel {
+
+    & > .flexiblebox,
+    & > .flexiblebox-as-rightbox,
+    & > .gcitem,
+    & > .panel {
       &:first-child {
         margin-top: @ku-rightcolumn-top;
       }
