--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -423,7 +423,7 @@
           line-height: 1.3em;
           text-transform: none;
           padding: 0;
-          margin: 10px 0 5px;
+          margin: 5px 0 5px;
         }
 
         .text {
@@ -1065,9 +1065,10 @@
     .GridForside {
       .single-column {
         .gridbox.with-img {
+          // Nyhedsbokse fuld bredde
           &.size1 {
             .box2 img {
-              height: 130%;
+              height: 100%;
             }
           }
         }
