--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -1173,9 +1173,10 @@
   .GridForside {
     .single-column {
       .gridbox.with-img {
+        // Nyhedsbokse fuld bredde
         &.size1 {
           .box2 img {
-            height: 130%;
+            height: 100%;
           }
         }
       }
