--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -1,14 +1,13 @@
 /* Slider */
-
 .gallery-nav,
 .slide-gallery,
 .slideshow {
   visibility: hidden;
   position: relative;
 
-
   &:not(.slick-initialized) {
     height: @gridbox1;
+
     .slide-link {
       position: absolute;
     }
@@ -170,7 +169,6 @@
     img {
       .image-fadeOut();
     }
-
     // .caption {
     //   color: @text-color;
     // }
@@ -199,20 +197,8 @@
   outline: none;
   background: transparent;
 
+  &:focus,
   &:hover {
-    color: transparent;
-    outline: none;
-    background: transparent;
-
-    &:before {
-      opacity: 1;
-    }
-  }
-
-  &:focus {
-    color: transparent;
-    outline: none;
-    background: transparent;
 
     &:before {
       opacity: 1;
@@ -230,6 +216,30 @@
   @media (min-width: @screen-sm) {
     // Only display arrows in desktop
     visibility: visible;
+  }
+}
+// Pause button
+
+.slick-pause {
+  z-index: 2;
+  font-size: 38px;
+  line-height: 0;
+  position: absolute;
+  bottom: 5%;
+  right: 2%;
+  padding: 0;
+  cursor: pointer;
+  color: @white-color;
+  outline: none;
+  background: transparent;
+  opacity: 0.55;
+  border: none;
+  outline: none;
+  background: transparent;
+
+  &:focus,
+  &:hover {
+    opacity: 1;
   }
 }
 
@@ -331,82 +341,81 @@
     display: none;
   }
 
-    .caption {
-      // Textbar bottom as default
-      display: block;
-      position: relative;
-      bottom: 0;
-      width: 100%;
-      letter-spacing: 0.7px;
-      line-height: @line-height-small;
-      padding: 10px;
-      font-size: 14px;
+  .caption {
+    // Textbar bottom as default
+    display: block;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    letter-spacing: 0.7px;
+    line-height: @line-height-small;
+    padding: 10px;
+    font-size: 14px;
+    color: @text-color;
+    background: @gray-f5;
+
+    h2 {
+      margin-top: 0;
+      margin-bottom: 5px;
+      color: inherit;
+      font-size: 20px;
+      line-height: 1.2;
+    }
+
+    p {
+      margin: 0 0 6px;
+    }
+
+    &.subcolor_5 {
+      background: @ku-gray;
       color: @text-color;
-      background: @gray-f5;
-
-      h2 {
-        margin-top: 0;
-        margin-bottom: 5px;
-        color: inherit;
-        font-size: 20px;
-        line-height: 1.2;
-      }
-
-      p {
-        margin: 0 0 6px;
-      }
-
-      &.subcolor_5 {
-        background: @ku-gray;
-        color: @text-color;
-        @media (min-width: @screen-sm) {
-          background: fade(@ku-gray, 90%);
-        }
-
-        &.full-bg {
-          background: @ku-gray;
-        }
-      }
-
-      &.subcolor_6 {
-        background: @gray-f5;
-        color: @text-color;
-        @media (min-width: @screen-sm) {
-          background: fade(@white-color, 90%);
-        }
-
-        &.full-bg {
-          background: @gray-f5;
-        }
-      }
-
-      &.subcolor_7 {
-        background: @brown;
-        color: @white-color;
-        @media (min-width: @screen-sm) {
-          background: fade(@brown, 83%);
-        }
-
-        &.full-bg {
-          background: @brown;
-        }
+      @media (min-width: @screen-sm) {
+        background: fade(@ku-gray, 90%);
       }
 
       &.full-bg {
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        padding: 15px;
-        height: 100%;
-        width: 100%;
+        background: @ku-gray;
       }
     }
 
-    &:hover .caption {
-      text-decoration: none;
+    &.subcolor_6 {
+      background: @gray-f5;
+      color: @text-color;
+      @media (min-width: @screen-sm) {
+        background: fade(@white-color, 90%);
+      }
+
+      &.full-bg {
+        background: @gray-f5;
+      }
     }
 
+    &.subcolor_7 {
+      background: @brown;
+      color: @white-color;
+      @media (min-width: @screen-sm) {
+        background: fade(@brown, 83%);
+      }
+
+      &.full-bg {
+        background: @brown;
+      }
+    }
+
+    &.full-bg {
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      padding: 15px;
+      height: 100%;
+      width: 100%;
+    }
+  }
+
+  &:hover .caption {
+    text-decoration: none;
+  }
   @media (min-width: @screen-sm) and (max-width: @screen-sm-max) {
     .caption {
       // Special caption iPad
@@ -416,66 +425,64 @@
     }
   }
   @media (min-width: @screen-md) {
+    .caption {
+      font-size: 16px;
+      padding: 12px 15px 10px 20px;
+      overflow: hidden;
+      position: absolute;
+      left: 0;
+      z-index: 2;
+      background: rgba(@white-color, .9);
+      border: 0;
 
-      .caption {
-        font-size: 16px;
-        padding: 12px 15px 10px 20px;
-        overflow: hidden;
-        position: absolute;
-        left: 0;
-        z-index: 2;
-        background: rgba(@white-color, .9);
-        border: 0;
-
-        h2 {
-          font-size: 26px;
-          margin-bottom: 10px;
-        }
-
-        &.textblock-left {
-          right: auto;
-          left: 0;
-          padding: 15px;
-          width: 45%;
-          height: 100%;
-          padding: 16px 20px 20px 30px;
-        }
-
-        &.textblock-right {
-          right: 0;
-          left: auto;
-          padding: 15px;
-          width: 45%;
-          height: 100%;
-          padding: 16px 30px 20px 20px;
-        }
-
-        &.textlabel-left {
-          top: 50%;
-          bottom: auto;
-          transform: translateY(-50%);
-          width: 45%;
-          min-height: 70%;
-          padding: 16px 20px 20px 30px;
-          .border-right-radius(2px);
-        }
-
-        &.textlabel-right {
-          top: 50%;
-          bottom: auto;
-          right: 0;
-          left: auto;
-          transform: translateY(-50%);
-          width: 45%;
-          min-height: 70%;
-          padding: 16px 30px 20px 20px;
-          .border-left-radius(2px);
-        }
-
-        &.full-bg {
-          padding: 30px 45px;
-        }
+      h2 {
+        font-size: 26px;
+        margin-bottom: 10px;
       }
 
+      &.textblock-left {
+        right: auto;
+        left: 0;
+        padding: 15px;
+        width: 45%;
+        height: 100%;
+        padding: 16px 20px 20px 30px;
+      }
+
+      &.textblock-right {
+        right: 0;
+        left: auto;
+        padding: 15px;
+        width: 45%;
+        height: 100%;
+        padding: 16px 30px 20px 20px;
+      }
+
+      &.textlabel-left {
+        top: 50%;
+        bottom: auto;
+        transform: translateY(-50%);
+        width: 45%;
+        min-height: 70%;
+        padding: 16px 20px 20px 30px;
+        .border-right-radius(2px);
+      }
+
+      &.textlabel-right {
+        top: 50%;
+        bottom: auto;
+        right: 0;
+        left: auto;
+        transform: translateY(-50%);
+        width: 45%;
+        min-height: 70%;
+        padding: 16px 30px 20px 20px;
+        .border-left-radius(2px);
+      }
+
+      &.full-bg {
+        padding: 30px 45px;
+      }
+    }
   }
 }
