Various removal of unused styling

--- a/docs/_includes/components/spinner.html
+++ b/docs/_includes/components/spinner.html
@@ -11,7 +11,7 @@
     <span class="sr-only">Loading...</span>
   </div>
   {% endhighlight %}
-  <h2>KU flashing dots</h2>
+  <!-- <h2>KU flashing dots</h2>
   <div class="bs-example" data-example-id="dots-spinner">
     <div class="ku-dots-loading" role="status"><span class="sr-only">Loading...</span></div>
   </div>
@@ -19,5 +19,5 @@
     <div class="ku-dots-loading" role="status">
       <span class="sr-only">Loading...</span>
     </div>
-  {% endhighlight %}
+  {% endhighlight %} -->
 </div>
