--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -222,17 +222,17 @@
 
 .slick-pause {
   z-index: 2;
-  font-size: 38px;
+  font-size: 24px;
   line-height: 0;
   position: absolute;
-  bottom: 5%;
-  right: 2%;
+  bottom: 13px;
+  right: 1%;
   padding: 0;
   cursor: pointer;
   color: @white-color;
   outline: none;
   background: transparent;
-  opacity: 0.55;
+  opacity: 0.45;
   border: none;
   outline: none;
   background: transparent;
