--- a/less/responsive-utilities.less
+++ b/less/responsive-utilities.less
@@ -21,12 +21,12 @@
 // Visibility utilities
 // Note: Deprecated .visible-xs, .visible-sm, .visible-md, and .visible-lg as of v3.2.0
 
-.visible-lg,
-.visible-md,
-.visible-sm,
-.visible-xs {
-  .responsive-invisibility();
-}
+// .visible-lg,
+// .visible-md,
+// .visible-sm,
+// .visible-xs {
+//   .responsive-invisibility();
+// }
 
 .visible-lg-block,
 .visible-lg-inline,
