--- a/less/variables.less
+++ b/less/variables.less
@@ -613,6 +613,7 @@
 
 //== Pills
 @nav-pills-border-radius:                   @border-radius-base;
+@nav-pills-border-color:                     @gray;
 @nav-pills-bg-color:                        #f3f3f3;
 @nav-pills-active-link-hover-bg:            @gray-light;
 @nav-pills-active-link-hover-color:         @component-active-color;
