--- a/docs/_includes/components/progress-bars.html
+++ b/docs/_includes/components/progress-bars.html
@@ -120,7 +120,7 @@
 </div>
 {% endhighlight %}
 
-  <h2 id="progress-striped">Striped</h2>
+  <!-- <h2 id="progress-striped">Striped</h2>
   <p>Uses a gradient to create a striped effect. Not available in IE9 and below.</p>
   <div class="bs-example" data-example-id="striped-progress-bar">
     <div class="progress">
@@ -181,7 +181,7 @@
     <span class="sr-only">45% Complete</span>
   </div>
 </div>
-{% endhighlight %}
+{% endhighlight %} -->
 
   <h2 id="progress-stacked">Stacked</h2>
   <p>Place multiple bars into the same <code>.progress</code> to stack them.</p>
@@ -190,7 +190,7 @@
       <div class="progress-bar progress-bar-success" style="width: 35%">
         <span class="sr-only">35% Complete (success)</span>
       </div>
-      <div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 20%">
+      <div class="progress-bar progress-bar-warning" style="width: 20%">
         <span class="sr-only">20% Complete (warning)</span>
       </div>
       <div class="progress-bar progress-bar-danger" style="width: 10%">
@@ -203,7 +203,7 @@
   <div class="progress-bar progress-bar-success" style="width: 35%">
     <span class="sr-only">35% Complete (success)</span>
   </div>
-  <div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 20%">
+  <div class="progress-bar progress-bar-warning" style="width: 20%">
     <span class="sr-only">20% Complete (warning)</span>
   </div>
   <div class="progress-bar progress-bar-danger" style="width: 10%">
