--- a/less/progress-bars.less
+++ b/less/progress-bars.less
@@ -48,23 +48,16 @@
 
 // Striped bars
 //
-// `.progress-striped .progress-bar` is deprecated as of v3.2.0 in favor of the
-// `.progress-bar-striped` class, which you just add to an existing
-// `.progress-bar`.
-.progress-striped .progress-bar,
-.progress-bar-striped {
-  #gradient > .striped();
-  background-size: 40px 40px;
-}
+// .progress-bar-striped {
+//   #gradient > .striped();
+//   background-size: 40px 40px;
+// }
 
 // Call animation for the active one
 //
-// `.progress.active .progress-bar` is deprecated as of v3.2.0 in favor of the
-// `.progress-bar.active` approach.
-.progress.active .progress-bar,
-.progress-bar.active {
-  .animation(progress-bar-stripes 2s linear infinite);
-}
+// .progress-bar.active {
+//   .animation(progress-bar-stripes 2s linear infinite);
+// }
 
 
 // Variations
