--- a/less/tooltip.less
+++ b/less/tooltip.less
@@ -49,20 +49,20 @@
     border-width: @tooltip-arrow-width @tooltip-arrow-width 0;
     border-top-color: @tooltip-arrow-color;
   }
-  &.top-left .tooltip-arrow {
-    bottom: 0;
-    right: @tooltip-arrow-width;
-    margin-bottom: -@tooltip-arrow-width;
-    border-width: @tooltip-arrow-width @tooltip-arrow-width 0;
-    border-top-color: @tooltip-arrow-color;
-  }
-  &.top-right .tooltip-arrow {
-    bottom: 0;
-    left: @tooltip-arrow-width;
-    margin-bottom: -@tooltip-arrow-width;
-    border-width: @tooltip-arrow-width @tooltip-arrow-width 0;
-    border-top-color: @tooltip-arrow-color;
-  }
+  // &.top-left .tooltip-arrow {
+  //   bottom: 0;
+  //   right: @tooltip-arrow-width;
+  //   margin-bottom: -@tooltip-arrow-width;
+  //   border-width: @tooltip-arrow-width @tooltip-arrow-width 0;
+  //   border-top-color: @tooltip-arrow-color;
+  // }
+  // &.top-right .tooltip-arrow {
+  //   bottom: 0;
+  //   left: @tooltip-arrow-width;
+  //   margin-bottom: -@tooltip-arrow-width;
+  //   border-width: @tooltip-arrow-width @tooltip-arrow-width 0;
+  //   border-top-color: @tooltip-arrow-color;
+  // }
   &.right .tooltip-arrow {
     top: 50%;
     left: 0;
@@ -84,18 +84,18 @@
     border-width: 0 @tooltip-arrow-width @tooltip-arrow-width;
     border-bottom-color: @tooltip-arrow-color;
   }
-  &.bottom-left .tooltip-arrow {
-    top: 0;
-    right: @tooltip-arrow-width;
-    margin-top: -@tooltip-arrow-width;
-    border-width: 0 @tooltip-arrow-width @tooltip-arrow-width;
-    border-bottom-color: @tooltip-arrow-color;
-  }
-  &.bottom-right .tooltip-arrow {
-    top: 0;
-    left: @tooltip-arrow-width;
-    margin-top: -@tooltip-arrow-width;
-    border-width: 0 @tooltip-arrow-width @tooltip-arrow-width;
-    border-bottom-color: @tooltip-arrow-color;
-  }
+  // &.bottom-left .tooltip-arrow {
+  //   top: 0;
+  //   right: @tooltip-arrow-width;
+  //   margin-top: -@tooltip-arrow-width;
+  //   border-width: 0 @tooltip-arrow-width @tooltip-arrow-width;
+  //   border-bottom-color: @tooltip-arrow-color;
+  // }
+  // &.bottom-right .tooltip-arrow {
+  //   top: 0;
+  //   left: @tooltip-arrow-width;
+  //   margin-top: -@tooltip-arrow-width;
+  //   border-width: 0 @tooltip-arrow-width @tooltip-arrow-width;
+  //   border-bottom-color: @tooltip-arrow-color;
+  // }
 }
