--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -113,7 +113,7 @@ body {
         display: block;
         margin: 0;
           &::after {
-            content: 'Klik her for at tilføje nyt accordion';
+            content: 'Klik her for at tilf\00f8je nyt accordion';
             color: @gray-light;
             html:lang(en) & {
               content: 'Click here to add a new accordion';
