--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -117,7 +117,7 @@ body {
       margin: 5px 0;
 
       &::before {
-        content: 'Placer cursoren her, og klik på ikonet i v\00e6rkt\00f8jslinjen for at tilf\00f8je et nyt accordion:';
+        content: 'Klik her, og derefter p\00e5 ikonet i v\00e6rkt\00f8jslinjen for at tilf\00f8je et nyt accordion:';
         color: @gray-light;
         vertical-align: middle;
 
