Datatables input fields

--- a/docs/assets/css/datatables/datatables.css
+++ b/docs/assets/css/datatables/datatables.css
@@ -14,10 +14,9 @@
   display: table-header-group;
 }
 
-.dataTables_wrapper tbody+tfoot {
-  /* Hide bottom tfoot */
+/* .dataTables_wrapper tbody+tfoot {
   display: none;
-}
+} */
 
 .dataTables_wrapper thead+tfoot {
   display: none;
