--- a/docs/_includes/js/collapse.html
+++ b/docs/_includes/js/collapse.html
@@ -143,8 +143,25 @@
 </div>
 {% endhighlight %}
 
-Jump to open accordion:
-<a href="#" id="togglebutton">Click</a>
+<h3 id="jump-to-open">Jump to open accordion</h3>
+
+<a href="#" id="LinkToOpenAccordion">Click to go to open accordion</a>
+{% highlight html %}
+<a href="#" id="LinkToOpenAccordion">Click to go to open accordion</a>
+{% endhighlight %}
+{% highlight js %}
+// Link to open accordion
+$('#LinkToOpenAccordion').click(function(e){
+  e.preventDefault();
+  // Accordion content id:
+  $('#collapseTwo').collapse('toggle');
+  $('html, body').animate({
+     // Accordion heading id:
+      scrollTop: $("#headingTwo").offset().top - 50
+  }, 800);
+});
+{% endhighlight %}
+
 <h2 id="collapse-only-one-accordion">Open only one accordion at the time</h2>
   <p>In order to make only one accordion open at a time, use the <code>data-parent=""</code> attributes on each accordion in the group:</p>
 
@@ -375,7 +392,7 @@ $('#myCollapsible').on('hidden.bs.collapse', function () {
 <script>
   $(document).ready(function() {
     // Link to open accordion
-    $('#togglebutton').click(function(e){
+    $('#LinkToOpenAccordion').click(function(e){
       e.preventDefault();
       // Accordion content id:
       $('#collapseTwo').collapse('toggle');
